force-app/main/default/objects/Deployment_Task__c/Deployment_Task__c.object-meta.xml
<CustomObject>
    <label>Deployment Task</label>
    <nameField>
        <label>Deployent Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>