force-app/main/default/objects/Deployment_Task__c/fields/Apply_To__c.field-meta.xml
<CustomField>
    <fullName>Apply_To__c</fullName>
    <label>Apply To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Environment In Pipeline</fullName>
                <default>true</default>
                <label>All Environment In Pipeline</label>
            </value>
            <value>
                <fullName>Specific Environment In Pipeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>