force-app/main/default/objects/Deployment_Task__c/fields/Governance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Governance_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Governance Approval</label>
    <type>Checkbox</type>
</CustomField>