force-app/main/default/objects/Deployment_Task__c/fields/Notify_Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Notify_Task_Owner__c</fullName>
    <label>Notify Task Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Akshay</fullName>
            </value>
            <value>
                <fullName>Komathi</fullName>
            </value>
            <value>
                <fullName>Sanath</fullName>
            </value>
            <value>
                <fullName>Poonam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>