force-app/main/default/objects/Deployment_Task__c/fields/Perform_Deployment_Task__c.field-meta.xml
<CustomField>
    <fullName>Perform_Deployment_Task__c</fullName>
    <label>Perform Deployment Task</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Deployment</fullName>
            </value>
            <value>
                <fullName>After Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>