force-app/main/default/objects/Deployment_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Promote To SIT</fullName>
            </value>
            <value>
                <fullName>Promote To UAT</fullName>
            </value>
            <value>
                <fullName>Promote To Prod</fullName>
            </value>
            <value>
                <fullName>Promoted To SIT</fullName>
            </value>
            <value>
                <fullName>Promoted To UAT</fullName>
            </value>
            <value>
                <fullName>Promoted To Prod</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>