force-app/main/default/objects/Deployment_Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Task</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Custom Settings</fullName>
            </value>
            <value>
                <fullName>Data load</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>