force-app/main/default/objects/Deployment_Task__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Deployment Tasks</relationshipLabel>
    <relationshipName>Deployment_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>