force-app/main/default/objects/Deployment_Task__c/recordTypes/Salesforce_Manual_Configuration.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Manual_Configuration</fullName>
    <active>true</active>
    <label>Salesforce Manual Configuration</label>
</RecordType>