force-app/main/default/objects/Deployment_Task__c/listViews/Release_Management_Deployment_Task.listView-meta.xml
<ListView>
    <fullName>Release_Management_Deployment_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Release Management</label>
    <queue>Release_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>